--- a/mall.css
+++ b/mall.css
@@ -37,7 +37,7 @@ body {
 }
 
 .start {
-	width: 100%;w
+	width: 100%;
 	height: 100vh;
 	background-image: url("ganyu_wide.jpg");
 	background-repeat: no-repeat;
