--- a/mall.css
+++ b/mall.css
@@ -26,20 +26,6 @@ margin: 0;
  padding: 20px;
 }
 */
-a.first:link{
-color: #E21343;
-text-decoration: none;
-}
-a.first:hover{
-color:#6D0A0B;
-}
-a.second:link{
-text-decoration: none;
-color: #E43da;
-}
-a.second:hover{
-color:#6D0A0B;
-}
 /* page one*/
 
 
@@ -50,6 +36,9 @@ color:#6D0A0B;
  font-size: 60px;
  color: #3c3031;
  font-family: "a Asian Ninja";
+	justify-content: center;
+	align-items: flex-start;
+	
 }
 
 .grid-wrapper {
@@ -64,9 +53,19 @@ background-image: url("ganyu_wide.jpg");
 background-size: cover;
 background-repeat: no-repeat;
 background-position:center;
-	display: flex;
-	z-index: 2
+display: flex;
+	position: relative;
+z-index: 2
+
 }
+
+
+.title-text {
+	top: 20px;
+}
+
+
+
 
 .obj2 {
  grid-column: 1 / span 4;
@@ -77,6 +76,7 @@ background-repeat: no-repeat;
 background-position: center;
 	width: 100%;
 	height: 100vh;
+	align-items: flex-start;
 }
 .obj3 {
  
