--- a/mall.css
+++ b/mall.css
@@ -30,9 +30,9 @@ margin: 0;
 
 
 .grid-obj {
- background-color:#FFF;
- text-align: center;
- padding: 20% 0%;
+ padding: 0;
+	height: 100vh;
+display: flex;
  font-size: 60px;
  color: #3c3031;
  font-family: "a Asian Ninja";
@@ -54,14 +54,13 @@ background-size: cover;
 background-repeat: no-repeat;
 background-position:center;
 display: flex;
-	position: relative;
 z-index: 2
 
 }
 
 
 .title-text {
-	top: 20px;
+	top: 10px;
 }
 
 
