--- a/mall.css
+++ b/mall.css
@@ -29,6 +29,24 @@ background-size: contain;
 z-index: 3;	
 	
 }
+
+
+.cloud-container {
+	display: flex;
+	jutify-content: space-between;
+	margin: 0;
+	padding: 0;
+	flex-wrap: wrap;
+	z-index: 2;
+}
+
+.Moln-Right {
+	width: 100%;
+}
+
+.Moln-Left {
+	width: 100%
+}
 /*
 .nav li {
  display: inline-block;
@@ -46,8 +64,7 @@ z-index: 3;
 
 .grid-obj {
  padding: 0;
-	margin: 0;
-height: 100vh;
+margin: 0;
 display: flex;
  font-size: 90px;
  color: #3c3031;
@@ -64,6 +81,7 @@ display: flex;
 .obj1 {
  grid-column: 1 / span 4;
  grid-row: 1;
+	height: 100vh;
 background-color: #fff;
 background-image: url("ganyu_wide.jpg");
 background-size: cover;
