--- a/mall.css
+++ b/mall.css
@@ -37,11 +37,13 @@ z-index: 3;
 	margin: 0;
 	padding: 0;
 	flex-wrap: wrap;
+	top: 0;
 	z-index: 2;
 }
 
 .Moln-Right {
 	width: 100%;
+
 }
 
 .Moln-Left {
