--- a/mall.css
+++ b/mall.css
@@ -21,12 +21,12 @@ margin: 0;
 position: fixed;
 background-image: url("warning.png");
 background-repeat: no-repeat;
-bottom: 20px;
+bottom: 0px;
 right: 50px;
 width: 120px;;
 height: 100px;
 background-size: contain;
-z-index: 3;	
+z-index: 4;	
 	
 }
 
@@ -35,12 +35,15 @@ z-index: 3;
 	pointer-events: none;
 	jutify-content: space-between;
 	position: fixed;
+	padding: 0;
 	margin: 0;
 	flex-wrap: wrap;
 	float: right;
 	top: 70%;
-	left: 50%;
+	left: 70%;
 	z-index: 3;
+	width: 50%;
+	background-size: cover;
 }
 
 /* right */
@@ -56,7 +59,6 @@ z-index: 3;
 }
 
 .Moln-Right {
-
 
 }
 
@@ -76,6 +78,9 @@ z-index: 3;
  padding: 20px;
 }
 */
+
+
+
 /* page one*/
 
 
@@ -97,21 +102,20 @@ display: flex;
 
 .obj1 {
  grid-column: 1 / span 4;
- grid-row: 1;
+	grid-row: 1;
 	height: 100vh;
-background-color: #fff;
-background-image: url("ganyu_wide.jpg");
-background-size: cover;
-background-repeat: no-repeat;
-background-position:center;
-display: flex;
-z-index: 2
-
+	background-color: #fff;
+	background-image: url("genshins.jpg");
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position:center;
+	display: flex;
+	z-index: 2
 }
 
 
 .title-text {
-	top: 0px;
+	top: 0%;
 }
 
 
@@ -128,9 +132,22 @@ background-position: center;
 	display: flex;
 	height: 100vh;
 	align-items: flex-start;
+}	
 	
-	
+.Furina {
+	z-index: 4;
+	display: flex;
+	width: 50%;
+	margin-top: 10%;
+	margin-right: 45%;
+	align-items: flex-start;
+	/*
+	background-color: rgba(255, 0, 0, 0.3);
+	*/
+	transform: translateX(20%) translateY(40%) translateZ(80%);
 }
+	
+
 .obj3 {
  
  grid-row: 3;
