--- a/mall.css
+++ b/mall.css
@@ -59,11 +59,11 @@ z-index: 4;
 }
 
 .Moln-Right {
-
+margin-top: 20%;
 }
 
 .Moln-Left {
-	 
+	 margin-top: 20%;
 	
 }
 /*
@@ -105,21 +105,13 @@ display: flex;
 	grid-row: 1;
 	height: 100vh;
 	background-color: #fff;
-	background-image: url("genshins.jpg");
+	background-image: url("ganyu_wide.jpg");
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position:center;
 	display: flex;
 	z-index: 2
 }
-
-
-.title-text {
-	top: 0%;
-}
-
-
-
 
 .obj2 {
  grid-column: 1 / span 4;
@@ -131,11 +123,12 @@ background-position: center;
 	padding: 0;
 	display: flex;
 	height: 100vh;
+	position: relative;
 	align-items: flex-start;
 }	
 	
 .Furina {
-	z-index: 4;
+	z-index: 6;
 	display: flex;
 	width: 50%;
 	margin-top: 10%;
@@ -146,7 +139,26 @@ background-position: center;
 	*/
 	transform: translateX(20%) translateY(40%) translateZ(80%);
 }
+
+.arrow {
+	z-index: 6;
+	display: flex;
+	width: 20%;
+	margin-top: 10%;
+	margin-right: 35%;
+	align-items: flex-start;
+}
 	
+.page2-text {
+	position:absolute;
+	align-content: center;
+	z-index: 5;
+	/*
+	background-color: rgba(255, 0, 0, 0.2); /* Debug */
+	right: 25%;
+	top: 10%;
+	
+}
 
 .obj3 {
  
