--- a/mall.css
+++ b/mall.css
@@ -66,23 +66,6 @@ margin-top: 20%;
 	 margin-top: 20%;
 	
 }
-/*
-.nav li {
- display: inline-block;
- font-size: 20px;
- padding: 20px;
-}
-.nav li {
- display: inline-block;
- font-size: 20px;
- padding: 20px;
-}
-*/
-
-
-
-/* page one*/
-
 
 .grid-obj {
  padding: 0;
@@ -127,26 +110,31 @@ background-position: center;
 	align-items: flex-start;
 }	
 	
+
 .Furina {
-	z-index: 6;
+	display: block;
+}
+
+.Furina img {
+	left: 50%;
+}
+.Furina-container{
 	display: flex;
-	width: 50%;
-	margin-top: 10%;
-	margin-right: 45%;
-	align-items: flex-start;
-	/*
-	background-color: rgba(255, 0, 0, 0.3);
-	*/
-	transform: translateX(20%) translateY(40%) translateZ(80%);
+	flex-direction: column;
+	position: relative;
+	padding-top: 10%;
+	padding-right: 20%;
+	z-index: 6;
+}
+
+.arrow-container {
 }
 
 .arrow {
-	z-index: 6;
 	display: flex;
+	z-index: 6;
 	width: 20%;
-	margin-top: 10%;
-	margin-right: 35%;
-	align-items: flex-start;
+	background-color:blueviolet;
 }
 	
 .page2-text {
@@ -177,6 +165,7 @@ background-position: center;
  display: grid;
  grid-template-columns: auto auto auto 10%;
  background-color: #2196F3;
+	background-repeat: no-repeat;
 }
 
 .grid-wrapper-pageone > div {
@@ -186,6 +175,7 @@ background-position: center;
  font-size: 30px;
 	width: 100%;
 	height: 100vh;
+	background-repeat: no-repeat;
 }
 
 .flex-wrapper-wrap > div {
