--- a/mall.css
+++ b/mall.css
@@ -6,6 +6,11 @@
 	src: url("aAsianNinja.ttf");
 }
 
+* {
+	margin: 0;
+	padding: 0;
+		
+}
 
 html, body {
 margin: 0;
@@ -21,19 +26,50 @@ margin: 0;
 position: fixed;
 background-image: url("warning.png");
 background-repeat: no-repeat;
-bottom: 0px;
+bottom: 90%;
 right: 50px;
 width: 120px;;
 height: 100px;
 background-size: contain;
-z-index: 4;	
+z-index: 8;	
 	
+}
+
+
+.title-text {
+	display: flex;
+ 	font-size: 90px;
+	margin-left: 30%;
+ 	color: #3c3031;
+ 	font-family: "a Asian Ninja";
+	align-items: flex-start;
+}
+
+.scroll-button {
+	display: flex;
+	width: 200%;
+	height: 5%;
+	margin-top: 800%;
+	margin-left: -340%;
+	justify-content: center;
+    font-size: 160%;
+	color: #3c3031;
+    background-color: #fff0d2;
+	font-family: "a Asian Ninja";
+    border: none;
+    border-radius: 5%;
+    cursor: pointer;
+    z-index: 3;
+}
+ 
+.scroll-button:hover {
+    background-color: #EBDDC4;
 }
 
 /* left */
 .cloud-section {
 	pointer-events: none;
-	jutify-content: space-between;
+	justify-content: space-between;
 	position: fixed;
 	padding: 0;
 	margin: 0;
@@ -42,41 +78,47 @@ z-index: 4;
 	top: 70%;
 	left: 70%;
 	z-index: 3;
-	width: 50%;
+	width: 15%;
 	background-size: cover;
 }
 
 /* right */
 .cloud-container {
-	jutify-content: space-between;
+	pointer-events: none;
+	justify-content: space-between;
 	position: fixed;
+	padding: 0;
 	margin: 0;
 	flex-wrap: wrap;
 	float: right;
 	top: 70%;
-	left: 0%;
-	z-index: 2;
+	right: 100%;
+	z-index: 3;
+	width: 20%;
+	background-size: cover;
 }
 
 .Moln-Right {
-margin-top: 20%;
+margin-top: 25%;
 }
 
 .Moln-Left {
-	 margin-top: 20%;
+	margin-top: 25%;
+	margin-left: -20%;
 	
 }
 
 .grid-obj {
  padding: 0;
 margin: 0;
-display: flex;
- font-size: 90px;
- color: #3c3031;
- font-family: "a Asian Ninja";
-	justify-content: center;
-	align-items: flex-start;
 	
+}
+.page2-text {
+ 	font-size: 90px;
+ 	color: #3c3031;
+ 	font-family: "a Asian Ninja";
+	margin-right: -22%;
+	margin-top: 15%;
 }
 
 .grid-wrapper {
@@ -88,7 +130,7 @@ display: flex;
 	grid-row: 1;
 	height: 100vh;
 	background-color: #fff;
-	background-image: url("ganyu_wide.jpg");
+	background-image: url("genshin-impact-4k-background-21w0vqi2r74d6a9l.jpg");
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position:center;
@@ -113,51 +155,67 @@ background-position: center;
 
 .Furina {
 	display: block;
+	z-index: 6;
 }
 
-.Furina img {
-	left: 50%;
-}
+
 .Furina-container{
 	display: flex;
 	flex-direction: column;
 	position: relative;
-	padding-top: 10%;
-	padding-right: 20%;
+	margin-top: 10%;
 	z-index: 6;
 }
 
-.arrow-container {
+
+.arrow, .furina{
+	display: flex;
+}
+.arrow-one {
+	margin-left: 60%;
 }
 
+.arrow-one, .arrow-two {
+	z-index: 10;
+	cursor: pointer;
+}
 .arrow {
 	display: flex;
 	z-index: 6;
 	width: 20%;
+	/*
 	background-color:blueviolet;
+	*/
 }
 	
+.arrow-two {
+	margin-left: -5%;
+	width: 20%;
+	display: flex;
+	margin-top: -35%;
+	scale: 50%;
+	
+}
 .page2-text {
 	position:absolute;
 	align-content: center;
 	z-index: 5;
-	/*
-	background-color: rgba(255, 0, 0, 0.2); /* Debug */
 	right: 25%;
 	top: 10%;
 	
 }
 
 .obj3 {
- 
  grid-row: 3;
-background-image: url("lanternrite_wide.jpg");
+background-image: url("Ganyu (Genshin Impact).png");
 background-size: cover;
 background-repeat: no-repeat;
-background-position: center;
+	background-position: center;
 	display: flex;
 	width: 100%;
 	height: 100vh;
+	overflow: hidden;
+	border: 1px solid red;
 }
 
 /* page one */
